tests/boxmodels/radius.scss
@use "salt" with(
  $mode: "dsm",
  $helpers-prefix: "%"
);

////////////////////////////////////////////////////////////////////////////////
//
//   Radius
//
////////////////////////////////////////////////////////////////////////////////

.radius{
  // pill: salt.radius('pill');
  // none: salt.radius('none');
  // circle: salt.radius('circle');
  // default: salt.radius('default');
  // error: salt.radius('foo');
}
